# gnome-shell-extensions-mediaplayer

./: .gitignore  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  build  configure.ac  include.mk  meson.build  meson_post_install.py
media@sotecware.net/: metadata.json
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.mo  de.po  es.po  fr.po  gl.po  gnome-shell-extension-mediaplayer.pot  gnome-shell-extensions-mediaplayer.pot  he.po  it.po  lt.po  meson.build  nb_NO.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  tr.po  uk_UA.po  zh_CN.po  zh_TW.po
src/: Makefile.am  dbus.js  extension.js  lib.js  manager.js  meson.build  metadata.json  metadata.json.in  org.gnome.shell.extensions.mediaplayer.gschema.xml  org.gnome.shell.extensions.mediaplayer.gschema.xml.in  panel.js  player.js  prefs.js  settings.js  stylesheet.css  ui.js  util.js  widget.js
