install_data([
    'dbus.js',
    'extension.js',
    'lib.js',
    'manager.js',
    'panel.js',
    'player.js',
    'prefs.js',
    'settings.js',
    'stylesheet.css',
    'ui.js',
    'util.js',
    'widget.js',
    'metadata.json'
  ],
  install_dir: EXTENSION_DIR
)

install_data(
    'org.gnome.shell.extensions.mediaplayer.gschema.xml',
    install_dir : SCHEMA_DIR
)
